Testing the API

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,8 +1,5 @@
 #root {
     max-width: 1280px;
-    margin: 0 auto;
-    padding: 2rem;
-    text-align: center;
 }
 
 .logo {
@@ -24,6 +21,19 @@
     to {
         transform: rotate(360deg);
     }
+}
+
+#error-page {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100vw;
+    height: 100vh;
+}
+
+#error-page h1 {
+    padding: 1rem;
 }
 
 @media (prefers-reduced-motion: no-preference) {
