--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,12 +4,12 @@
 
 @font-face {
   font-family: sourceSansSemi;
-  src: url('../assets/fonts/SourceSansPro-SemiBold.ttf');
+  src: url('/assets/fonts/SourceSansPro-SemiBold.ttf');
 }
 
 @font-face {
   font-family: sourceSansLight;
-  src: url('../assets/fonts/SourceSansPro-Light.ttf');
+  src: url('/assets/fonts/SourceSansPro-Light.ttf');
 }
 
 :root {
@@ -19,7 +19,8 @@
     font-weight: 400;
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
+    @apply bg-slate-50;
+    /* background-color: #242424; */
     /* background-color: #fff; */
 
     font-synthesis: none;
@@ -31,7 +32,7 @@
 
 a {
     font-weight: 500;
-    color: #646cff;
+    color: #fff;
     text-decoration: inherit;
 }
 a:hover {
